<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nirmalya.irms.activity.AdminDashboardActivity"
    android:background="@drawable/gradient_toolbar_bg_horizontal">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        app:srcCompat="@drawable/ic_left_arrowwhite"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="@string/str_irms_cams"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAbout"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_3sdp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:srcCompat="@drawable/ic_log_out_white" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/colorPrimaryBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAdminName"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="Admin Name"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtAdminNo"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center"
                android:text="Admin No."
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAdminName"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtChooseDist"
                style="@style/TextViewStyleUpdateProfile"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/str_choose_dist"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAdminNo" />

            <TextView
                android:id="@+id/edtChooseDist"
                style="@style/EditTextStyleUpdateProfile"
                android:hint="@string/str_select_dist"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtChooseDist"
                tools:ignore="Autofill,TextViewEdits" />

            <Spinner
                android:id="@+id/spnChooseDist"
                style="@style/spinner_style"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:popupBackground="@drawable/rounded_edittext_states_update_profile"
                android:visibility="invisible"
                app:layout_constraintHorizontal_bias="0.258"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtChooseDist" />

            <ImageView
                android:id="@+id/imgShowChooseDistSpinner"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/edtChooseDist"
                app:layout_constraintEnd_toEndOf="@id/edtChooseDist"
                app:layout_constraintTop_toTopOf="@id/edtChooseDist"
                app:srcCompat="@drawable/ic_expand"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtChooseCenter"
                style="@style/TextViewStyleUpdateProfile"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/str_choose_center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtChooseDist" />

            <TextView
                android:id="@+id/edtChooseCenter"
                style="@style/EditTextStyleUpdateProfile"
                android:hint="@string/str_select_center"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtChooseCenter"
                tools:ignore="Autofill,TextViewEdits" />

            <Spinner
                android:id="@+id/spnChooseCenter"
                style="@style/spinner_style"
                android:layout_width="@dimen/_0sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:popupBackground="@drawable/rounded_edittext_states_update_profile"
                android:visibility="invisible"
                app:layout_constraintHorizontal_bias="0.258"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtChooseCenter" />

            <ImageView
                android:id="@+id/imgShowStorytypeSpinner"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/edtChooseCenter"
                app:layout_constraintEnd_toEndOf="@id/edtChooseCenter"
                app:layout_constraintTop_toTopOf="@id/edtChooseCenter"
                app:srcCompat="@drawable/ic_expand"
                tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtChooseCenter">

            <androidx.cardview.widget.CardView
                android:id="@+id/totalCandidateCard"
                style="@style/DocumentCardStyle"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/scanInGateCard"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgCandidate"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:src="@drawable/ic_candidates"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txtTotalCandidate"
                        style="@style/DocumentTextStyle"
                        android:text="Total \nCandidate"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgCandidate"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/txtTotalCandidateNo"
                        style="@style/DocumentTextStyle"
                        android:text="00"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtTotalCandidate"
                        tools:ignore="HardcodedText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/scanInGateCard"
                style="@style/DocumentCardStyle"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/totalCandidateCard"
                app:layout_constraintRight_toLeftOf="@+id/scanInHallCard"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgGateScan"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:src="@drawable/ic_security_gate"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txtTotalGateScan"
                        style="@style/DocumentTextStyle"
                        android:text="Total Scanned In Entry Gate"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgGateScan"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/txtTotalGateScanNo"
                        style="@style/DocumentTextStyle"
                        android:text="00"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtTotalGateScan"
                        tools:ignore="HardcodedText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/scanInHallCard"
                style="@style/DocumentCardStyle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/scanInGateCard"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgHallScan"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:src="@drawable/ic_student_exam"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txtTotalHallScan"
                        style="@style/DocumentTextStyle"
                        android:text="Total Scanned In Exam Hall"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgHallScan"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/txtTotalHallScanNo"
                        style="@style/DocumentTextStyle"
                        android:text="00"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtTotalHallScan"
                        tools:ignore="HardcodedText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>